--- a/doc/03previous_solutions.tex
+++ b/doc/03previous_solutions.tex
@@ -96,7 +96,7 @@ Sieť na generovanie obrázkov, ktorej teoretický základ je popísaný vyšši
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[height=\imageHeight]{images/GenerateHands.png}
+		\includegraphics[width=\textwidth]{images/GenerateHands.png}
 		\caption{Architektúra siete na generovanie obrázkov \cite{GANeratedHands_CVPR2018}. V bielych obdĺžnikoch sú trénovateľné časti, čiernou sú označené stratové funkcie, zelenou sú obrázky z datasetu, modrou sú označené vygenerované obrázky a oranžovou binárny klasifikátor.}
 		\label{img:generateHands}
 	\end{center}
@@ -128,7 +128,7 @@ Navrhli systém založený na regresnom prístupe (podsekcia \ref{subchapt:regre
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[height=130px]{images/231hourglass.png}
+		\includegraphics[width=\textwidth]{images/231hourglass.png}
 		\caption{Návrh systému s použitím 2 modulov architektúry siete Hourglass}
 		%. Zobrazuje tieto dva za sebou zapojené moduly znázornené dvoma žltými trojuholníkmi. Na vstupe sú diskrétne objemové dáta zobrazené modrým kvádrom. Tie sú podvzorkované jadrom 3x3 a krokom 2. Medzi modulmi Hourglass je Res3D modul s jadrom 3x3 a Res3D s jadrom 1x1, z ktorých sú generované tepelné mapy kostí a kĺbov.}
 		\label{img:FuyangFramework}
