--- a/doc/06discussion.tex
+++ b/doc/06discussion.tex
@@ -9,8 +9,11 @@ Sieti sme nastavovali viacero parametrov. Počet filtrov pre reziduálne vetvy v
 Najväčším prínosom pre správne predikovanie súradníc bolo rozdelenie trénovania na tri fázy. Pôvodný postup trénovania bol s použitím stratovej funkcie pre všetky kĺby. Mali sme inicializované váhy náhodne `Xavierovskou' distribúciou. Po spustení trénovania výsledky predikcie sa nezlepšovali ani po vyše 100 epochách. Neskôr sme zistili, že ak zvolíme predikciu iba jednej tepelnej mapy, sieť sa dokáže naučiť správne predikovať tepelnú mapu. Preto sme zvolili tréning tak, aby sme stále predikovali všetky tepelné mapy, ale váhy menili iba podľa výsledkov z jednej mapy. Vždy keď sieť zmenila váhy tak, že vedela aspň polovicu prípadov správne zvoliť súradnice kĺbov, podľa ktorých menila váhy, prešli sme na ďalšiu fázu. 
 
 \section{Vyhodnotenie na obrázkoch}
-Natrénovanú sieť na našom datasete sme použili na predikovanie súradníc kĺbov ruky na rôznych videách. Z týchto videí sme nepoužili žiaden obrázok v našom datasete. Výstupné obrázky s predikovanými súradnicami je na obr. \ref{img:predicted_hands}, kde sme vykresľovali spojenia medzi týmito súradnicami.
-%uviesť, že vie predikovať iba jednu ruku, je to jedno či ľavú alebo pravú. Riešením pre viac rúk je použitie objektového detektora, ktorý nájde všetky ruky, tým náš systém určí súradnice kĺbov a hlavný systém spojí určí súradnice kĺbov na všetkých rukách.
+Natrénovanú sieť na našom datasete sme použili na predikovanie súradníc kĺbov ruky na rôznych videách. Z týchto videí sme nepoužili žiaden obrázok v našom datasete, teda môžeme sledovať, ako sieť predikuje súradnice kĺbov vo všeobecnosti. Výstupné obrázky s predikovanými súradnicami sú na obr. \ref{img:predicted_hands}, kde sme vykresľovali spojenia medzi týmito súradnicami. Obrázky sú rozdelené do dvoch stĺpcov, každý stĺpec zobrazuje RGB obrázok s určením pozície kĺbov na ruke a od neho napravo je pohľad zhora na ruku. Zobrazuje hĺbkovú informáciu, ktorú sme dostali zo stereoskopického záznamu kamery.
+
+Rozdelili sme obrázky podľa úspešnosti. Tie, ktoré považujeme za vhodne určené sme dali do pravého stĺpca a neúspešne určené do ľavého. Úspech alebo neúspech určenia súradníc kĺbov je spôsobená množinou obrázkov v našom datasete. Keď porovnáme obrázky z datasetu na obr. \ref{img:our_hands} a obrázky s predikovanými súradnicami na obr. \ref{img:predicted_hands}, môžeme si všimnúť podobnosť s tými, ktoré boli úspešne určené. Teda podobné polohy ľavej, či pravej ruky a taktiež natočenie, či je dlaň otočená smerom ku kamere alebo opačne. Na druhej strane máme neúspešne určené, ktoré sa podobajú menej, teda poloha ľavej alebo pravej ruky nie je v trénovacom datasete, ani také natočenie dlane. Riešením pre zvýšenie počtu správne určených obrázkoch je zväčšiť náš dataset a pridať rôznorodejšie polohy ruky.
+
+Náš systém je vytvorený na predikciu súradníc na jednej ruke. Pre úlohu ľudského učiteľa pre robota s jednou rukou je to dostačujúce. Úloha by sa mohla do budúcna rozšíriť o komplexnejšieho robota, ktorý by sa mal učiť pracovať s dvoma či viacerými rukami. Potom by bola možnosť rozšíriť náš systém o objektový detektor, ktorý vyhľadá v obraze všetky ruky. Každú nájdenú ruku označí bounding boxom a náš systém v ňom určí súradnice. Potom by sa dopočítali globálne súradnice.
 
 \begin{figure}[H]
 	\begin{center}
