--- a/doc/main.tex
+++ b/doc/main.tex
@@ -154,14 +154,14 @@ Podakovanie
 % koniec podakovania
 
 \chapter*{Abstrakt}\label{chap:abstract_sk}
-Táto práca sa venuje problematike ...
+Táto práca sa venuje problematike detekcii 3D pózy ruky so stereoskopického záznamu. Uvádza prehľad možností predikcie 3D súradníc hlavných kĺbov ruky a porovnáva ich pre aplikačnú oblasť interakcie robota s ľudským učiteľom. Obsahuje návrh a riešenie najvhodnejšieho prístupu k riešeniu tejto problematiky.
 
 ~\\
 Kľúčové slová: odhadovanie pozy ruky, sledovanie ruky
 \vfill\eject 
 
 \chapter*{Abstract}\label{chap:abstract_en}
-This thesis deals with ...
+This master thesis deals with 3D hand pose estimation on stereo vision. It comes with a methods overview of hand`s 3D joints prediction and compares it in the application field of robot-human interaction. It contains a proposal and solution of the best approach to the solution of this task.
 
 ~\\
 Keywords: hand pose estimation, hand tracking
